--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fontsource/oswald": "^4.4.5"
   },
   "devDependencies": {
+    "owd-plugin-vuetify": "https://github.com/owdproject/owd-plugin-vuetify",
     "@types/jest": "^26.0.22",
     "ts-jest": "^26.5.5",
     "jest": "^26.6.3"
