--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "url": "https://github.com/hacklover"
   },
   "dependencies": {
-    "@fontsource/oswald": "^4.4.5"
+    "@fontsource/oswald": "^4.4.5",
+    "owd-plugin-vuetify": "https://github.com/owdproject/owd-plugin-vuetify"
   },
   "devDependencies": {
-    "owd-plugin-vuetify": "https://github.com/owdproject/owd-plugin-vuetify",
     "@types/jest": "^26.0.22",
     "ts-jest": "^26.5.5",
     "jest": "^26.6.3"
